security: add jwt
